# eia-client-python

./: .gitignore  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
.github/workflows/: main.yml
docs/source/: api.rst  conf.py  eia_client.rst  getting_started.rst  index.rst  modules.rst  usage.rst
examples/: Quickstart_5minTutorial.ipynb  example_elec_retail_sales.py  example_total_energy.py
src/eia_client/: __init__.py  api_endpoint.py  api_key.py  cli.py  client.py  endpoint.py  main.py  parse.py  utils.py
src/eia_client/endpoint/: __init__.py  builder.py  electricity_retail_sales.py  total_energy.py
src/eia_opendata/: api_endpoint.py  cli.py  client.py
tests/: test_api_endpoint_builder.py  test_api_key.py
