[metadata]
name = eia_client
version = attr: eia_client.__version__
author = tayeva
author_email = 124453543+tayeva@users.noreply.github.com 
description = EIA Open Data API Python Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tayeva/eia-client-python
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.7
include_package_data = True
install_requires = 
    numpy
    pandas
    pyarrow
    requests

[options.packages.find]
where = src

[options.extras_require]
notebook = 
    jupyter
    matplotlib
dev = 
    autopep8
    black
    build
    flake8
    furo
    mccabe
    pycodestyle
    pyflakes
    pylint
    pytest
    sphinx
    twine
    yapf